recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:8: error: not enough arguments for method dragon: (order: Int, x: Double, y: Double, x2: Double, y2: Double)Unit.
Unspecified value parameter y2.
		dragon(order - 1 ,x2,y2 ((x+y+x2-y2)/.2),((y+y2+x-x2)/.2))
                      ^